src/css/style.css
:root {
  /* Light theme */
  --color-primary: #758bfd;
  --color-primary-light: #aeb8fe;
  --color-primary-dark: #27187e;

  --color-bg: #f1f2f6;
  --color-text: #1f2937;

  --color-white: #f1f2f6;
  --color-black: #1f2937;

  --color-success: #22c55e;
  --color-warning: #ff8600;
  --color-danger: #ef4444;

  --shadow-modal:
    0 4px 6px rgba(0, 0, 0, 0.05),
    0 12px 24px rgba(0, 0, 0, 0.15);

  --shadow-header:
    0 4px 6px rgba(0, 0, 0, 0.05),
    0 12px 24px rgba(0, 0, 0, 0.10);

  --shadow-footer:
    6px 2px 20px rgba(0, 0, 0, 0.05), 0 12px 24px rgba(0, 0, 0, 0.15);
}

/* Dark theme */
[data-theme="dark"] {
  --color-primary: #758bfd;
  --color-primary-light: #27187e;
  --color-primary-dark: #aeb8fe;

  --color-bg: #111827;
  --color-text: #f1f2f6;

  --color-white: #f1f2f6;
  --color-black: #1f2937;

  --color-success: #22c55e;
  --color-warning: #ff8600;
  --color-danger: #ef4444;

  --shadow-modal:
    0 4px 6px rgba(0, 0, 0, 0.3),
    0 12px 24px rgba(0, 0, 0, 0.5);
}

html {
    height: 100%;
}

body {
  background: var(--color-bg);
  color: var(--color-text);
  font-family: 'Clash Display', sans-serif;
  min-height: 100%;
  display: flex;
  flex-direction: column;
  margin: 0;
}

main {
    flex: 1 0 auto; 
}

nav{
  box-shadow: var(--shadow-header);
}

footer {
  flex-shrink: 0;
  box-shadow: var(--shadow-footer);
}

.card {
  background: var(--color-surface);
  border-radius: 12px;
}

.centeredDiv{
  display: flex;
  justify-content: center;
  align-items: center;
  max-height: 100vh;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.loginModal{
  border-radius: 12px;
  padding: 2rem;
  background: var(--color-bg);
  box-shadow: var(--shadow-modal);
  width: fit-content;
}

.inputField{
  width: 100%;
  padding: 0.65rem 1rem;

  background-color: #374151;
  border: 1px solid #4b5563;

  border-radius: 10px;

  color: var(--color-white);
  font-size: 0.95rem;

  outline: none;

  transition: all 0.2s ease;
}

.inputField:focus {
  box-shadow: 0 0 10px var(--color-primary);
}

label {
  display: block;
  font-size: 0.875rem;
  font-weight: 500;
  color: #9ca3af;
  margin-bottom: 0.25rem;
}

.textWhite{
  color: var(--color-white) !important;
}

.btn{
  width: 100%;
  padding: 0.65rem 1rem;
  background-color: var(--color-primary);
  border-radius: 10px;
  color: var(--color-white);
  font-size: 0.95rem;
  outline: none;
}

.btn:hover{
  box-shadow: 0 0 5px var(--color-primary);
}

.btnCancel{
  background-color: var(--color-black);
  border: 1px solid var(--color-bg)
}

.btnCancel:hover{
  box-shadow: 0 0 5px var(--color-black);
}

#open-modal-btn{
  background-color: var(--color-warning);
}

#open-modal-btn:hover{
  box-shadow: 0 0 5px var(--color-warning);
}


/* Navbar style */
/* Permet au footer de rester en bas */
html,
body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1;
}

/* Footer */
.footer {
  width: 100%;
  margin-top: auto;
  padding: 1rem 2rem;

  background-color: var(--color-bg);

  text-align: center;

  color: var(--color-text);
  font-size: 0.9rem;
}

.footer p {
  margin: 0;
}

.footer-author {
  color: var(--color-primary-dark);
  font-weight: 700;
  transition: color 0.2s ease;
}

.footer-author:hover {
  color: var(--color-primary);
}

/* Responsive */
@media (max-width: 768px) {

  .footer {
      padding: 1rem;
      font-size: 0.8rem;
  }

}

.navbar {
  position: sticky;
  top: 0;

  display: flex;
  justify-content: space-between;
  align-items: center;

  /* padding: 0 2rem; */
  height: 80px;
  min-height: 80px;
  padding: 0 1rem;

  background: var(--color-bg);

  border-bottom: 1px solid rgba(255,255,255,.08);

  z-index: 1000;
}

/* Responsive */
@media (min-width: 768px) {

  .navbar {
      padding:0 2rem;
  }

}

.logo {
  display: flex;
  align-items: center;
  
}

#logoNavBar {
  width: 180px;
  height: 60px;
  object-fit: contain;
  display: block;
}

.nav-menu {
  display: flex;
  align-items: center;
  gap: 1rem;

  list-style: none;
  margin: 0;
  padding: 0;
}

.nav-menu a {
  color: var(--color-text);
  text-decoration: none;
  font-weight: 500;

  transition: .2s;
}

.nav-menu a:hover {
  color: var(--color-primary);
}

.hamburger {
  display: none;

  border: none;
  background: none;

  cursor: pointer;
  color: var(--color-text);
}

.hamburger .material-icons {
  font-size: 32px;
}


/* Responsive design navBar*/
@media (max-width: 768px) {

  .hamburger {
    display: flex;
    z-index: 1001;
    padding-right: 2rem;
  }

  .nav-menu {
    position: fixed;
    top: 80px;
    right: -300px;

    width: 300px;
    height: calc(100vh - 0px);

    flex-direction: column;
    align-items: flex-start;

    padding: 2rem;

    background: var(--color-bg);

    transition: right 0.3s ease;
  }

  .nav-menu.active {
    right: 0;
    top: 3.82rem;
    z-index: 1;
  }

  .nav-menu li {
    width: 100%;
  }

  .nav-menu a {
    display: block;
    width: 100%;
    padding: 0.75rem 0;
  }

  .nav-menu a.profile {
    display: flex;
    width: 100%;
    padding: 0.75rem 0;
    justify-content: flex-start;
  }

  td, th {
    padding: 10px;
    font-size: 0.8rem;
  }

  .table-wrapper {
    border-radius: 8px;
  }

  .avatar-grid {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (min-width: 1024px) {
  .nav-menu{
    gap:2rem;
  }
}

.logout{
  color: var(--color-danger) !important;
  vertical-align: middle;
  margin-left: 4px;
}


/* Toggle switch style */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--color-bg);
  -webkit-transition: .4s;
  transition: .4s;
}
/* ... */

